fixes navbar to top and stops footer from overlapping content

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,7 +42,7 @@ nav {
   background: linear-gradient(to top, rgba(35,47,62,.8), rgba(35,47,62,.95));
   height: 3em;
   color: white;
-  position: fixed;
+  position: absolute;
   left: 0;
   right: 0;
   z-index: 0;
@@ -190,7 +190,7 @@ footer {
 .search-background {
   background: #a7abb1;
   padding: 0 1em 1em 1em;
-  position: fixed;
+  position: relative;
   bottom: 0px;
   width: 100%;
   height: 6em;
